# pt-rust-with-opencode

grpc-server/: Cargo.toml  build.rs
grpc-server/proto/: hello.proto  helloworld.proto
grpc-server/src/: main.rs
rest-api-server/: Cargo.toml
rest-api-server/src/: main.rs
websocket-server/: Cargo.toml
websocket-server/src/: main.rs
