[package]
name = "rest-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum: 웹 프레임워크 (매본적인 라우팅 및 핸들러 제공)
axum = "0.7"
# Tokio: Rust의 비동기 런타임 (JavaScript의 Node.js 이벤트 루프와 유사한 역할)
tokio = { version = "1.0", features = ["full"] }
# Serde: Rust의 직렬화/역직렬화 프레임워크 (JSON 변환 등에 핵심 라이
serde = { version = "1.0", features = ["derive"] }
# Serde JSON: JSON 데이터를 Serde의 데이터 포맷
serde_json = "1.0"